Main nav made responsive
must change filter dropdown to changing max-width as it overflows when viewport width gets too small.

--- a/index.html
+++ b/index.html
@@ -222,17 +222,21 @@
                         <li class="nav__dropdown--item"><a href="#">Goods for Sale</a></li>
                     </ul>
                 </div>
-                <ul class="main__nav--list">
-                    <li class="main__nav--item item-selected"><a href="#">All</a></li>
-                    <li class="main__nav--item"><a href="#">Animation</a></li>
-                    <li class="main__nav--item"><a href="#">Branding</a></li>
-                    <li class="main__nav--item"><a href="#">Illustration</a></li>
-                    <li class="main__nav--item"><a href="#">Mobile</a></li>
-                    <li class="main__nav--item"><a href="#">Print</a></li>
-                    <li class="main__nav--item"><a href="#">Product Design</a></li>
-                    <li class="main__nav--item"><a href="#">Typography</a></li>
-                    <li class="main__nav--item"><a href="#">Web Design</a></li>
-                </ul>
+                <span class="arrow-wrap">
+                    <a href="" id="left-arrow"><i class="fas fa-chevron-left fa-sm"></i></a>
+                    <ul class="main__nav--list">
+                        <li class="main__nav--item item-selected"><a href="#">All</a></li>
+                        <li class="main__nav--item"><a href="#">Animation</a></li>
+                        <li class="main__nav--item"><a href="#">Branding</a></li>
+                        <li class="main__nav--item"><a href="#">Illustration</a></li>
+                        <li class="main__nav--item"><a href="#">Mobile</a></li>
+                        <li class="main__nav--item"><a href="#">Print</a></li>
+                        <li class="main__nav--item"><a href="#">Product Design</a></li>
+                        <li class="main__nav--item"><a href="#">Typography</a></li>
+                        <li class="main__nav--item"><a href="#">Web Design</a></li>
+                    </ul>
+                    <a href="" id="right-arrow"><i class="fas fa-chevron-right fa-sm"></i></a>
+                </span>
                 <div class="main__nav--filters">
                     <button class="main__nav--filters-btn"><i class="fas fa-filter"></i>&nbspFilters</button>
                 </div>
@@ -696,5 +700,6 @@
     <script src="source/pageUp.js"></script>
     <script src="source/mobileHeaderDrop.js"></script>
     <script src="source/mobileHeaderDropDrop.js"></script>
+    <script src="source/mainNavArrow.js"></script>
 </body>
 </html>
